--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ attrs==21.2.0
 audioread==2.1.9
 autopep8==1.5.4
 backcall==0.2.0
-bleach==3.3.0
+bleach==3.3.0 
 blinker==1.4
 brotlipy==0.7.0
 cachetools==4.2.2
@@ -32,6 +32,7 @@ google-auth==1.21.3
 google-auth-oauthlib==0.4.4
 google-pasta==0.2.0
 grpcio==1.36.1
+gunicorn==20.1.0
 h5py==2.10.0
 idna==2.10
 importlib-metadata==4.5.0
